# CMakeX

./: .gitignore  CMakeLists.txt  DependenciesX.cmake  README.md
dummy/: CMakeLists.txt
dummy_lib/: CMakeLists.txt  header.h
dummy_lib_2/: CMakeLists.txt  header2.h
